chore: run prettier and fix spelling

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
               target="_blank"
               >flow - go - multisign</a
             >
-            &ndash; a repository which demostrates how to implement the
+            &ndash; a repository which demonstrates how to implement the
             serverside multisign transaction pattern on flow.
           </li>
           <li>
