docs: adjust wording

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             <a href="https://soundcloud.com/raa" target="_blank"
               >raa's soundcloud</a
             >
-            &ndash; minimal music i've make
+            &ndash; i make minimal music sometimes
           </li>
           <li>
             <a href="https://sikboi.tumblr.com/" target="_blank"
