chore: change short intro text

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         smart contract developer currently building smart contracts and
         infrastructure at
         <a href="https://thefootballclub.com/">tfc</a> and
-        <a href="http://zeedz.io">zeedz</a>
+        <a href="http://zeedz.io">zeedz</a>.
         i've been programming since the age of 11 and discovered blockchain
-        around 2016/2017, but i only started taking it seriously after getting
+        around 2016/2017 but i only started taking it really seriously after getting
         my master's degree.
       </p>
     </div>
