feat: add linkedin link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
         <a href="mailto:luka@racki.dev">e-mail</a>
         or check my
         <a href="https://twitter.com/lu_ka_ra_ch_ki" target="_blank">twitter</a
-        >, <a href="https://github.com/lukaracki" target="_blank">github</a> and
+        >, <a href="https://github.com/lukaracki" target="_blank">github</a>,
+        <a href="https://www.linkedin.com/in/luka-racki/" target="_blank"
+          >linkedin</a
+        >
+        and
         <a href="https://www.medium.com/@lu-ka-ra-ch-ki" target="_blank"
           >medium</a
         >
@@ -30,10 +34,10 @@
         smart contract developer currently building smart contracts and
         infrastructure at
         <a href="https://thefootballclub.com/">tfc</a> and
-        <a href="http://zeedz.io">zeedz</a>.
-        i've been programming since the age of 11 and discovered blockchain
-        around 2016/2017 but i only started taking it really seriously after getting
-        my master's degree.
+        <a href="http://zeedz.io">zeedz</a>. i've been programming since the age
+        of 11 and discovered blockchain around 2016/2017 but i only started
+        taking my career as a developer serious after getting my master's
+        degree.
       </p>
     </div>
     <div>
