fix: correct link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         or check my
         <a href="https://twitter.com/lu_ka_ra_ch_ki" target="_blank">twitter</a
         >, <a href="https://github.com/lukaracki" target="_blank">github</a>,
-        <a href="https://www.linkedin.com/in/luka-racki/" target="_blank"
+        <a href="https://www.linkedin.com/in/racki-luka/" target="_blank"
           >linkedin</a
         >
         and
