chore: remove extra word

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               >flow transaction service</a
             >
             &ndash; a nodeJS microservice that runs transactions on the flow
-            blockchain with with GCP PubSub and GCP KMS.
+            blockchain with GCP PubSub and GCP KMS.
           </li>
           <li>
             <a
