chore: run prettier

--- a/index.html
+++ b/index.html
@@ -10,33 +10,42 @@
 
   <body>
     <div id="preamble">
-      <a href="https://github.com/lukaracki"><h1 class="title">lu-ka-ra-ch-ki</h1></a>
+      <a href="https://github.com/lukaracki"
+        ><h1 class="title">lu-ka-ra-ch-ki</h1></a
+      >
       <h2 class="subtitle">
         contact me via
         <a href="mailto:luka@racki.dev">e-mail</a>
         or check my
-        <a href="https://twitter.com/lu_ka_ra_ch_ki" target="_blank">twitter</a>,
-        <a href="https://github.com/lukaracki" target="_blank">github</a>,
-        <a href="https://www.linkedin.com/in/racki-luka/" target="_blank">linkedin</a>
+        <a href="https://twitter.com/lu_ka_ra_ch_ki" target="_blank">twitter</a
+        >, <a href="https://github.com/lukaracki" target="_blank">github</a>,
+        <a href="https://www.linkedin.com/in/racki-luka/" target="_blank"
+          >linkedin</a
+        >
         and
-        <a href="https://www.medium.com/@lu_ka_ra_ch_ki" target="_blank">medium</a>
+        <a href="https://www.medium.com/@lu_ka_ra_ch_ki" target="_blank"
+          >medium</a
+        >
       </h2>
       <br />
     </div>
     <div>
       <p>
-        smart contract developer currently building smart contracts and infrastructure at
-        <a href="https://thefootballclub.com/">tfc</a> and <a href="http://zeedz.io">zeedz</a>. i've been programming
-        since the age of 11 and discovered blockchain around 2016/2017 but i only started taking my career as a
-        developer serious after getting my master's degree.
+        smart contract developer currently building smart contracts and
+        infrastructure at
+        <a href="https://thefootballclub.com/">tfc</a> and
+        <a href="http://zeedz.io">zeedz</a>. i've been programming since the age
+        of 11 and discovered blockchain around 2016/2017 but i only started
+        taking my career as a developer serious after getting my master's
+        degree.
       </p>
     </div>
     <div>
       <h2>Education</h2>
       <ul>
         <li>
-          master's degree in Electrical Engineering and Computing, at University of Zagreb, Faculty of Electrical
-          Engineering and Computing (FER)
+          master's degree in Electrical Engineering and Computing, at University
+          of Zagreb, Faculty of Electrical Engineering and Computing (FER)
         </li>
       </ul>
     </div>
@@ -47,8 +56,12 @@
           freelance fullstack developer at
           <a href="https://www.upwork.com/">upwork</a>
         </li>
-        <li>software developer at <a href="https://wearenotch.com>">notch</a></li>
-        <li>blockchain consultant at <a href="https://wearenotch.com>">notch</a></li>
+        <li>
+          software developer at <a href="https://wearenotch.com>">notch</a>
+        </li>
+        <li>
+          blockchain consultant at <a href="https://wearenotch.com>">notch</a>
+        </li>
         <li>blockchain developer at <a href="http://zeedz.io">zeedz</a></li>
         <li>
           lead blockchain developer at
@@ -61,7 +74,9 @@
       <ul>
         <li>
           2nd place at
-          <a href="https://devfolio.co/flow-hackathon/dashboard">flow blockchain hackathon</a>
+          <a href="https://devfolio.co/flow-hackathon/dashboard"
+            >flow blockchain hackathon</a
+          >
           on the hybrid wallet solution track. (25,000$)
         </li>
       </ul>
@@ -71,21 +86,38 @@
       <div>
         <ul>
           <li>
-            <a href="https://github.com/lukaracki/flow-transaction-service" target="_blank">flow transaction service</a>
-            &ndash; a nodeJS microservice that runs transactions on the flow blockchain with GCP PubSub and GCP KMS.
+            <a
+              href="https://github.com/lukaracki/flow-transaction-service"
+              target="_blank"
+              >flow transaction service</a
+            >
+            &ndash; a nodeJS microservice that runs transactions on the flow
+            blockchain with GCP PubSub and GCP KMS.
           </li>
           <li>
-            <a href="https://github.com/lukaracki/flow-go-multisign" target="_blank">flow - go - multisign</a>
-            &ndash; a repository which demonstrates how to implement the serverside multisign transaction pattern on
-            flow.
+            <a
+              href="https://github.com/lukaracki/flow-go-multisign"
+              target="_blank"
+              >flow - go - multisign</a
+            >
+            &ndash; a repository which demonstrates how to implement the
+            serverside multisign transaction pattern on flow.
           </li>
           <li>
-            <a href="https://github.com/lukaracki/fcl-kms-gcp-authorizer" target="_blank">GCP KMS flow authorizer</a>
-            &ndash; a nodeJS library used to authorize transactions with GCP KMS on the flow blockchain.
+            <a
+              href="https://github.com/lukaracki/fcl-kms-gcp-authorizer"
+              target="_blank"
+              >GCP KMS flow authorizer</a
+            >
+            &ndash; a nodeJS library used to authorize transactions with GCP KMS
+            on the flow blockchain.
           </li>
           <li>
-            <a href="https://github.com/lukaracki/flow-aws-cli" target="_blank">flow AWS CLI</a>
-            &ndash; send flow transactions authorized by AWS KMS through the CLI.
+            <a href="https://github.com/lukaracki/flow-aws-cli" target="_blank"
+              >flow AWS CLI</a
+            >
+            &ndash; send flow transactions authorized by AWS KMS through the
+            CLI.
           </li>
         </ul>
       </div>
@@ -95,11 +127,15 @@
       <div>
         <ul>
           <li>
-            <a href="https://soundcloud.com/raa" target="_blank">raa's soundcloud</a>
+            <a href="https://soundcloud.com/raa" target="_blank"
+              >raa's soundcloud</a
+            >
             &ndash; i make minimal music sometimes
           </li>
           <li>
-            <a href="https://sikboi.tumblr.com/" target="_blank">sikboi's tumblr</a>
+            <a href="https://sikboi.tumblr.com/" target="_blank"
+              >sikboi's tumblr</a
+            >
             &ndash; my mood board
           </li>
         </ul>
@@ -110,11 +146,17 @@
       <div>
         <ul>
           <li>
-            <a href="https://worldofwarcraft.blizzard.com/en-gb/" target="_blank">world of warcraft</a>
+            <a
+              href="https://worldofwarcraft.blizzard.com/en-gb/"
+              target="_blank"
+              >world of warcraft</a
+            >
             &ndash; 2.7k+ WW Monk, 2.4k FDK
           </li>
           <li>
-            <a href="https://www.leagueoflegends.com/" target="_blank">league of legends</a>
+            <a href="https://www.leagueoflegends.com/" target="_blank"
+              >league of legends</a
+            >
             &ndash; diamond top/mid/jungle on EUW and EUNE
           </li>
         </ul>
@@ -125,11 +167,17 @@
       <p class="footer">
         <em
           >heavily inspired by
-          <a href="https://github.com/pcaversaccio/pcaversaccio.github.io">pcaversaccio's fork</a>
+          <a href="https://github.com/pcaversaccio/pcaversaccio.github.io"
+            >pcaversaccio's fork</a
+          >
           and
-          <a href="https://github.com/gakonst/gakonst.github.io">gakonst's fork</a>
+          <a href="https://github.com/gakonst/gakonst.github.io"
+            >gakonst's fork</a
+          >
           of
-          <a href="https://github.com/transmissions11/transmissions11.github.io">t11s' fork</a>
+          <a href="https://github.com/transmissions11/transmissions11.github.io"
+            >t11s' fork</a
+          >
           of the
           <a href="https://github.com/dapphub/dapp-tools">dapptools</a>
           website</em
