--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="The personal website of Luka Racki." />
-    <title>lu-ka-ra-ch-ki</title>
+    <title>highskore</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
