style: reduce font size

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="a blockchain developer's portfolio" />
+    <meta name="description" content="a blockchain developer's portfolio" />
     <title>highskore</title>
     <link href="https://unpkg.com/nes.css/css/nes.min.css" rel="stylesheet" />
     <link
@@ -15,32 +16,35 @@
   <body>
     <div>
       <!-- Introduction and Social Icons -->
-      <section class="message -left">
-        <div class="nes-balloon from-left">
-          <p>
-            currently building smart contracts and backend at
-            <a href="https://find.xyz/">find</a> and
-            <a href="http://zeedz.io">zeedz</a>.
-          </p>
-        </div>
-        <div class="title-container">
-          <h1 class="title super-big">highskore</h1>
-          <div class="social-icons">
-            <a href="https://twitter.com/highskore_eth" target="_blank">
-              <i class="nes-icon twitter is-medium"></i>
-            </a>
-            <a href="https://github.com/highskore" target="_blank">
-              <i class="nes-icon github is-medium"></i>
-            </a>
-            <a href="http://medium.com/@lu_ka_ra_ch_ki" target="_blank">
-              <i class="nes-icon medium is-medium"></i>
-            </a>
-            <a href="mailto:me@highskore.com" target="_top">
-              <i class="nes-icon gmail is-medium"></i>
-            </a>
+      <section class="message-list">
+        <section class="message -left">
+          <div class="nes-balloon from-left">
+            <p>
+              currently building smart contracts and backend at
+              <a href="https://find.xyz/">find</a> and
+              <a href="http://zeedz.io">zeedz</a>.
+            </p>
           </div>
-        </div>
+          <div class="title-container">
+            <h1 class="title super-big">highskore</h1>
+            <div class="social-icons">
+              <a href="https://twitter.com/highskore_eth" target="_blank">
+                <i class="nes-icon twitter is-medium"></i>
+              </a>
+              <a href="https://github.com/highskore" target="_blank">
+                <i class="nes-icon github is-medium"></i>
+              </a>
+              <a href="http://medium.com/@lu_ka_ra_ch_ki" target="_blank">
+                <i class="nes-icon medium is-medium"></i>
+              </a>
+              <a href="mailto:me@highskore.com" target="_top">
+                <i class="nes-icon gmail is-medium"></i>
+              </a>
+            </div>
+          </div>
+        </section>
       </section>
+
       <!-- Education -->
       <section class="topic">
         <div class="nes-container with-title">
@@ -75,8 +79,7 @@
               <a href="https://www.upwork.com/">upwork</a>
             </li>
             <li>
-              software developer at
-              <a href="https://wearenotch.com>">notch</a>
+              software developer at <a href="https://wearenotch.com>">notch</a>
             </li>
             <li>
               blockchain consultant at
