style: change icons

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
       <section class="topic">
         <div class="nes-container with-title">
           <p class="title">
-            <i class="nes-icon is-small trophy"></i>Open Source<i
-              class="nes-icon is-small trophy"
+            <i class="nes-icon is-small heart"></i>Open Source<i
+              class="nes-icon is-small heart"
             ></i>
           </p>
           <ul class="nes-list is-circle">
@@ -178,8 +178,8 @@
       <section class="topic">
         <div class="nes-container with-title">
           <p class="title">
-            <i class="nes-icon is-small heart"></i>Fun<i
-              class="nes-icon is-small heart"
+            <i class="nes-icon is-small like"></i>Fun<i
+              class="nes-icon is-small like"
             ></i>
           </p>
           <ul class="nes-list is-circle">
