chore: rename section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section class="topic">
         <div class="nes-container with-title">
           <p class="title">
-            <i class="nes-icon is-small star"></i>Employment History<i
+            <i class="nes-icon is-small star"></i>Work History<i
               class="nes-icon is-small star"
             ></i>
           </p>
