--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <a href="https://find.xyz/">find</a> and <a href="http://zeedz.io">zeedz</a>.
         </div>
         <div class="socials">
-          <a href="http://twitter.com/0xhighskore" target="_blank">Twitter</a> |
+          < <a href="http://twitter.com/0xhighskore" target="_blank">Twitter</a> |
           <a href="http://github.com/highskore" target="_blank">GitHub</a> |
           <a href="http://medium.com/@lu_ka_ra_ch_ki" target="_blank">Medium</a> |
-          <a href="mailto:me@highskore.com" target="_blank">Email</a>
+          <a href="mailto:me@highskore.com" target="_blank">Email</a> >
         </div>
       </div>
       <div class="buttons">
