fix: mobile styling

--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     <div class="container">
       <div class="title"></div>
       <div class="info">
-        <div class="you">
-          you: <span id="browserInfo"></span>
-          <span id="datetimeInfo"></span>
-        </div>
+        <div class="world">world: <span id="datetimeInfo"></span></div>
+        <div class="you">you: <span id="browserInfo"></span></div>
         <div class="me">
           me: a blockchain dev currently building smart contracts and backend at
           <a href="https://find.xyz/">find</a> and <a href="http://zeedz.io">zeedz</a>.
