feat: add light mode

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="container">
       <div class="title"></div>
       <div class="info">
+        <button id="toggleMode">*</button>
         <div class="world">world: <span id="datetimeInfo"></span></div>
         <div class="you">you: <span id="browserInfo"></span></div>
         <div class="me">
