--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
       <div class="buttons">
         <button id="restart" class="restart-button">[ RESTART ]</button>
-        <button id="bio" class="bio-button" onclick="window.location.href='bio.html'">[ BIO ]</button>
+        <button id="bio" class="bio-button" onclick="window.location.href='bio'">[ BIO ]</button>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/figlet" defer></script>
       <script src="script.js" defer></script>
