--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" />
   </head>
   <body>
+    <div class="matrix-effect">
+      <!-- Generate multiple spans using JavaScript -->
+    </div>
     <div class="container">
       <div class="title"></div>
       <div class="info">
@@ -18,7 +21,7 @@
         <div class="you">you: <span id="browserInfo"></span></div>
         <div class="me">
           me: a blockchain dev currently building smart contracts and backend at
-          <a href="https://find.xyz/">find</a> and <a href="http://zeedz.io">zeedz</a>.
+          <a href="https://find.xyz/" target="_blank">find</a> and <a href="http://zeedz.io" target="_blank">zeedz</a>.
         </div>
         <div class="socials">
           < <a href="http://twitter.com/0xhighskore" target="_blank">Twitter</a> |
@@ -33,6 +36,7 @@
       </div>
       <script src="https://cdn.jsdelivr.net/npm/figlet" defer></script>
       <script src="script.js" defer></script>
+      <script src="matrix.js"></script>
     </div>
   </body>
 </html>
