fix: remove stacy and add some alt text

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="container">
       <div class="title"></div>
       <div class="info">
-        <button id="toggleMode">*</button>
-        <button id="shareButton">#</button>
+        <button id="toggleMode" alt="toggle-switch">*</button>
+        <button id="shareButton" alt="share-theme">#</button>
         <div class="world">world: <span id="datetimeInfo"></span></div>
         <div class="you">you: <span id="browserInfo"></span></div>
         <div class="me">
