--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       <div class="title"></div>
       <div class="info">
         <button id="toggleMode" alt="toggle-switch">*</button>
-        <button id="shareButton" alt="share-theme">#</button>
+        <button id="shareButton" alt="share-theme" >#</button>
+        <div id="copiedMessage" class="cloudMessage" class="cloud-message">Link copied!</div>
         <div class="world">world: <span id="datetimeInfo"></span></div>
         <div class="you">you: <span id="browserInfo"></span></div>
         <div class="me">
@@ -25,7 +26,7 @@
           <a href="https://find.xyz/" target="_blank">find</a> and <a href="http://zeedz.io" target="_blank">zeedz</a>.
         </div>
         <div class="socials">
-          < <a href="http://twitter.com/0xhighskore" target="_blank">Twitter</a> |
+           <a href="http://twitter.com/0xhighskore" target="_blank">Twitter</a> |
           <a href="http://github.com/highskore" target="_blank">GitHub</a> |
           <a href="http://medium.com/@lu_ka_ra_ch_ki" target="_blank">Medium</a> |
           <a href="mailto:me@highskore.com" target="_blank">Email</a> >
@@ -33,7 +34,8 @@
       </div>
       <div class="buttons">
         <button id="restart">RESTART</button>
-        <button id="bio" onclick="window.location.href='bio'">BIO</button>
+        <button id="PR">PUBLIC RELATIONS</button>
+        <button id="bio" onclick="window.location.href='bio.html'">BIO</button>
       </div>
       <script src="scripts/figlet.js" defer></script>
       <script src="scripts/main.js" defer></script>
