--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="buttons">
         <button id="restart">RESTART</button>
-        <button id="PR">PUBLIC RELATIONS</button>
+        <button id="PR">PR</button>
         <button id="bio" onclick="window.location.href='bio.html'">BIO</button>
       </div>
       <script src="scripts/figlet.js" defer></script>
