--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="https://find.xyz/" target="_blank">find</a> and <a href="http://zeedz.io" target="_blank">zeedz</a>.
         </div>
         <div class="socials">
-           <a href="http://twitter.com/0xhighskore" target="_blank">Twitter</a> |
+           < <a href="http://twitter.com/0xhighskore" target="_blank">Twitter</a> |
           <a href="http://github.com/highskore" target="_blank">GitHub</a> |
           <a href="http://medium.com/@lu_ka_ra_ch_ki" target="_blank">Medium</a> |
           <a href="mailto:me@highskore.com" target="_blank">Email</a> >
@@ -34,7 +34,7 @@
       </div>
       <div class="buttons">
         <button id="restart">RESTART</button>
-        <button id="PR">PR</button>
+       
         <button id="bio" onclick="window.location.href='bio.html'">BIO</button>
       </div>
       <script src="scripts/figlet.js" defer></script>
