feat: convert message to toast

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <!-- Generate multiple spans using JavaScript -->
     </div>
     <div class="container">
+      <div id="toast" class="toast">title &amp; theme combination copied to clipboard</div>
       <div class="title"></div>
       <div class="info">
-        <button id="toggleMode" alt="toggle-switch">*</button>
-        <button id="shareButton" alt="share-theme">#</button>
-        <div id="copiedMessage" class="cloudMessage cloud-message">Link copied!</div>
+        <button id="toggleMode">&#42;</button>
+        <button id="shareButton">&#35;</button>
         <div class="world">world: <span id="datetimeInfo"></span></div>
         <div class="you">you: <span id="browserInfo"></span></div>
         <div class="me">
@@ -26,15 +26,15 @@
           <a href="https://find.xyz/" target="_blank">find</a> and <a href="http://zeedz.io" target="_blank">zeedz</a>.
         </div>
         <div class="socials">
-          <
+          &lt;
           <a href="http://twitter.com/0xhighskore" target="_blank">Twitter</a>
-          |
+          &#124;
           <a href="http://github.com/highskore" target="_blank">GitHub</a>
-          |
+          &#124;
           <a href="http://medium.com/@lu_ka_ra_ch_ki" target="_blank">Medium</a>
-          |
+          &#124;
           <a href="mailto:me@highskore.com" target="_blank">Email</a>
-          >
+          &gt;
         </div>
       </div>
       <div class="buttons">
