style: center text

--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" />
   </head>
   <body>
+    <!-- Matrix effect -->
+    <div class="matrix-effect"></div>
     <!-- Main container -->
     <div class="container">
-      <!-- Matrix effect -->
-      <div class="matrix-effect"></div>
       <!-- Toast message -->
       <div id="toast" class="toast">title &amp; theme combination copied to clipboard</div>
-
       <!-- Title element -->
       <div class="title"></div>
-
       <!-- Content element -->
       <div class="content">
         <!-- Information section -->
@@ -31,6 +29,9 @@
           <!-- Share button -->
           <button id="shareButton" title="Share this font/theme combination">&#35;</button>
 
+          <!-- Default button -->
+          <button id="defaultButton" title="Default font/theme combination">&#36;</button>
+
           <!-- World information -->
           <div class="world">world: <span id="datetimeInfo"></span></div>
 
@@ -39,9 +40,12 @@
 
           <!-- Developer information -->
           <div class="me">
-            me: a blockchain dev currently building smart contracts and backend at
-            <a href="https://find.xyz/" target="_blank">find</a> and
-            <a href="http://zeedz.io" target="_blank">zeedz</a>.
+            me: a software dev currently building smart contracts
+            <a href="https://twitter.com/findonflow" target="_blank">@find</a> &amp;&amp @<a
+              href="https://twitter.com/zeedz_official"
+              target="_blank"
+              >@zeedz</a
+            >.
           </div>
 
           <!-- Social links -->
