chore: remove extra char

--- a/index.html
+++ b/index.html
@@ -41,11 +41,8 @@
           <!-- Developer information -->
           <div class="me">
             me: a software dev currently building smart contracts
-            <a href="https://twitter.com/findonflow" target="_blank">@find</a> &amp;&amp @<a
-              href="https://twitter.com/zeedz_official"
-              target="_blank"
-              >@zeedz</a
-            >.
+            <a href="https://twitter.com/findonflow" target="_blank">@find</a> &amp;&amp
+            <a href="https://twitter.com/zeedz_official" target="_blank">@zeedz</a>.
           </div>
 
           <!-- Social links -->
